--- a/assets/main.scss
+++ b/assets/main.scss
@@ -96,13 +96,12 @@
     display: table-cell;
     font-size: $base-font-size * 1.3;
     font-weight: 500;
+    padding-right: 10px;
   }
   .right {
-    padding-left: 10px;
     display: table-cell;
     width: 100%;
     hr {
-      margin-top: -$base-font-size * 0.3;
       border: 1px dashed $grey-color;
     }
   }
