--- a/_includes/social.html
+++ b/_includes/social.html
@@ -1,6 +1,6 @@
 <div class="social">
   {% for item in site.data.social %}
   <a href="{{ item.link }}" target="_blank" title="{{ item.name }}"
-      ><i class="{{ item.icon }}"></i></a>
+      ><i class="{{ item.icon }}">&nbsp;</i></a>
   {% endfor %}
 </div>
