update section jump

--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -1,4 +1,6 @@
-<div class="page-section-title"><span>Publications</span><span class="right"><hr /></span></div>
+<div class="page-section-title">
+    <span><a id="jump-publications"></a>Publications</span><span class="right"><hr /></span>
+</div>
 {% assign self_highlight = "<span class='self'>" |
     append: site.title | append: "</span>" %}
 {% assign pub_id = 0 %}
