--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -25,11 +25,11 @@ layout: default
       {{ content }}
     </div>
   </div>
-  <a id="jump-publications"></a>
   {%- include publications.html -%}
   {%- if site.posts.size > 0 -%}
-  <a id="jump-posts"></a>
-  <div class="page-section-title"><span>Posts</span><span class="right"><hr /></span></div>
+  <div class="page-section-title">
+      <span><a id="jump-posts"></a>Posts</span><span class="right"><hr /></span>
+  </div>
   <ul class="post-list">
     {%- for post in site.posts -%}
     <li>
