--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -1,5 +1,5 @@
 <div class="page-section-title">
-    <span><a id="jump-publications"></a>Publications</span><span class="right"><hr /></span>
+    <span><a id="jump-publications"></a>Publications &amp; Preprints</span><span class="right"><hr /></span>
 </div>
 {% assign self_highlight = "<span class='self'>" |
     append: site.title | append: "</span>" %}
@@ -12,10 +12,10 @@
 </div>
 {% for pub in pub_group.pubs %}
   <div class="publist-entry">
-    <div class="title"><a
-         href="#paper-{{pub.key}}"
-         id="paper-{{pub.key}}"><i class="far fa-circle"></i></a>
-      {{ pub.title }}
+    <div class="title">
+        <a href="#paper-{{pub.key}}"
+            id="paper-{{pub.key}}"><i class="far fa-circle"></i></a>
+        <span>{{ pub.title }}</span>
     </div>
     <div class="authors">{{ pub.authors | join: ", " |
       replace: site.title, self_highlight |
