--- a/assets/main.scss
+++ b/assets/main.scss
@@ -7,7 +7,11 @@ $base-line-height: 1.6;
 $content-width:    1024px;
 $on-laptop:        1024px;
 
-@import "minima";
+$grey-color:       #828282 !default;
+
+@import
+  "minima/skins/classic",
+  "minima/initialize";
 
 body {
     text-align: justify;
@@ -27,6 +31,7 @@ body {
 }
 
 .home #two-col #left {
+  text-align: center;
   img {
     width: 90%;
     border-radius: 100%;
@@ -40,7 +45,6 @@ body {
   .info {
     color: rgba(0,0,0,.54);
   }
-  text-align: center;
 }
 
 .social a {
@@ -57,23 +61,31 @@ body {
     vertical-align: 20%;
   }
   .text {
-    font-size: $base-font-size * 1.5;
+    font-size: $base-font-size * 1.1;
+    font-weight: 500;
   }
 }
 
 .publist-entry {
-  margin-left: 30px;
+  margin-left: 50px;
   .title {
     font-style: italic;
-    margin-left: -20px;
+    margin-left: -40px;
     margin-top: 0.8em;
+    display: flex;
+    justify-content: space-between;
     i {
+      flex-shink: 0;
       font-size: 10px;
       vertical-align: middle;
-      margin-right: 5px;
+      margin-right: 13px;
+    }
+    span {
+      flex-grow: 1;
     }
   }
   .authors {
+    font-size: $base-font-size * 0.9;
     .equal_contrib {
       margin-left: -.2em;
     }
@@ -88,9 +100,11 @@ body {
     }
   }
   .conf {
+    font-size: $base-font-size * 0.9;
     font-style: italic;
   }
   .tldr {
+    font-size: $base-font-size * 0.8;
     .tldr-title {
       display: table-cell;
       font-weight: 200;
@@ -121,17 +135,22 @@ body {
 .page-section-title {
   clear: both;
   margin-top: 1em;
+  display: flex;
+  justify-content: space-between;
   span {
-    display: table-cell;
+    flex-shink: 0;
     font-size: $base-font-size * 1.3;
     font-weight: 500;
     padding-right: 10px;
   }
   .right {
-    display: table-cell;
-    width: 100%;
+    flex-grow: 1;
+    display: flex;
+    align-items: center;
     hr {
       border: 1px dashed $grey-color;
+      margin: 0;
+      width: 100%;
     }
   }
 }
